--- a/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
+++ b/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - aspnetapp</title>
+
+    <script
+        src="https://www.datadoghq-browser-agent.com/datadog-rum.js"
+        type="text/javascript">
+    </script>
+    <script>
+        window.DD_RUM && window.DD_RUM.init({
+            applicationId: 'b43964c6-524c-4905-bf79-e77fa10d007d',
+            clientToken: 'puba45824a7f464b1073462d78381dd8f9a',
+            site: 'datadoghq.com',
+            service: 'aspnetapp',
+            env: 'net-sandbox',
+            version: '1.0.0',
+            sampleRate: 100,
+            trackInteractions: true
+            allowedTracingOrigins: [/http[s]{0,1}:\/\/localhost.*/,/http[s]{0,1}:\/\/.*\.amazonaws\.com/, /http[s]{0,1}:\/\/.*\.azure\.com/]
+        });
+    </script>
+        
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
