Fix comma typo in  dd js agent init

--- a/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
+++ b/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             env: 'net-sandbox',
             version: '1.0.0',
             sampleRate: 100,
-            trackInteractions: true
+            trackInteractions: true,
             allowedTracingOrigins: [/http[s]{0,1}:\/\/localhost.*/,/http[s]{0,1}:\/\/.*\.amazonaws\.com/, /http[s]{0,1}:\/\/.*\.azure\.com/]
         });
     </script>
