Add origins to distri tracing - doesnt work

--- a/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
+++ b/samples/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             version: '1.0.0',
             sampleRate: 100,
             trackInteractions: true,
-            allowedTracingOrigins: [/.*\/\/localhost.*/, /.*\.amazonaws\.com/, /.*\.azure\.com/]
+            allowedTracingOrigins: [/.*\/\/localhost.*/, /.*\.amazonaws\.com/, /.*\.azure\.com/, /.*/]
         });
     </script>
         
